Added a function to determine the number of iterations it takes fort a 4 digit number to achieve kaprekar's constant using kaprekar's algo